--- a/casper/magni_casper/Cargo.toml
+++ b/casper/magni_casper/Cargo.toml
@@ -25,6 +25,7 @@ bench = false
 
 [dependencies]
 odra = "2.4"
+odra-modules = "2.4"
 chrono = { version = "0.4", optional = true }
 
 [dev-dependencies]
